Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31807

CMake project configuration fails if project path contains non-Latin charaters

XMLWordPrintable

    • Windows
    • 741a0ac93 (15.0)

      If the path to a CMake project contains non-Latin characters, e.g. 右京, the configuration fails due to missing auto-setup.cmake:

      [cmake] Running C:\Qt\Tools\CMake_64\bin\cmake.exe -S C:/Users/WDAGUtilityAccount/Documents/右京/untitled -B C:/Users/WDAGUtilityAccount/Documents/右京/untitled/build/Desktop_Qt_6_8_0_MSVC2022_64bit-Debug "-DCMAKE_C_COMPILER:FILEPATH=C:/Program Files (x86)/Microsoft Visual Studio/2022/BuildTools/VC/Tools/MSVC/14.41.34120/bin/HostX64/x64/cl.exe" "-DCMAKE_BUILD_TYPE:STRING=Debug" "-DCMAKE_CXX_FLAGS_INIT:STRING=" "-DCMAKE_GENERATOR:STRING=Ninja" "-DCMAKE_CXX_COMPILER:FILEPATH=C:/Program Files (x86)/Microsoft Visual Studio/2022/BuildTools/VC/Tools/MSVC/14.41.34120/bin/HostX64/x64/cl.exe" "-DQT_QMAKE_EXECUTABLE:FILEPATH=C:/Qt/6.8.0/msvc2022_64/bin/qmake.exe" "-DCMAKE_PROJECT_INCLUDE_BEFORE:FILEPATH=C:\Users\WDAGUtilityAccount\Documents\右京\untitled\build\Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/.qtc/package-manager/auto-setup.cmake" "-DCMAKE_PREFIX_PATH:PATH=C:/Qt/6.8.0/msvc2022_64" in C:\Users\WDAGUtilityAccount\Documents\右京\untitled\build\Desktop_Qt_6_8_0_MSVC2022_64bit-Debug.
      [cmake] CMake Error at CMakeLists.txt:3 (project):
      [cmake]   project could not find requested file:
      [cmake] 
      [cmake]     C:/Users/WDAGUtilityAccount/Documents/右京/untitled/build/Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/.qtc/package-manager/auto-setup.cmake
      [cmake] 
      [cmake] 
      [cmake] CMake Error at C:/Qt/Tools/CMake_64/share/cmake-3.29/Modules/FindThreads.cmake:66 (message):
      [cmake]   FindThreads only works if either C or CXX language is enabled
      [cmake] Call Stack (most recent call first):
      [cmake]   C:/Qt/Tools/CMake_64/share/cmake-3.29/Modules/CMakeFindDependencyMacro.cmake:76 (find_package)
      [cmake]   C:/Qt/6.8.0/msvc2022_64/lib/cmake/Qt6/QtPublicDependencyHelpers.cmake:36 (find_dependency)
      [cmake]   C:/Qt/6.8.0/msvc2022_64/lib/cmake/Qt6/Qt6Dependencies.cmake:34 (_qt_internal_find_third_party_dependencies)
      [cmake]   C:/Qt/6.8.0/msvc2022_64/lib/cmake/Qt6/Qt6Config.cmake:136 (include)
      [cmake]   CMakeLists.txt:12 (find_package)
      [cmake] 
      [cmake] 
      [cmake] -- Configuring incomplete, errors occurred!
      [cmake] 
      [cmake] The command "C:\Qt\Tools\CMake_64\bin\cmake.exe -S C:/Users/WDAGUtilityAccount/Documents/右京/untitled -B C:/Users/WDAGUtilityAccount/Documents/右京/untitled/build/Desktop_Qt_6_8_0_MSVC2022_64bit-Debug "-DCMAKE_C_COMPILER:FILEPATH=C:/Program Files (x86)/Microsoft Visual Studio/2022/BuildTools/VC/Tools/MSVC/14.41.34120/bin/HostX64/x64/cl.exe" "-DCMAKE_BUILD_TYPE:STRING=Debug" "-DCMAKE_CXX_FLAGS_INIT:STRING=" "-DCMAKE_GENERATOR:STRING=Ninja" "-DCMAKE_CXX_COMPILER:FILEPATH=C:/Program Files (x86)/Microsoft Visual Studio/2022/BuildTools/VC/Tools/MSVC/14.41.34120/bin/HostX64/x64/cl.exe" "-DQT_QMAKE_EXECUTABLE:FILEPATH=C:/Qt/6.8.0/msvc2022_64/bin/qmake.exe" "-DCMAKE_PROJECT_INCLUDE_BEFORE:FILEPATH=C:\Users\WDAGUtilityAccount\Documents\右京\untitled\build\Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/.qtc/package-manager/auto-setup.cmake" "-DCMAKE_PREFIX_PATH:PATH=C:/Qt/6.8.0/msvc2022_64"" terminated with exit code 1.
      [cmake] 
      [cmake] Elapsed time: 00:00.

      Steps to reproduce:

      • Have a CMake Qt project at some path containing non-Latin characters or create such one.
      • Open the project in Qt Creator
      • Configure the project (this is normally done automatically by Qt Creator)
      • Check the logs (General Messages)

        For Gerrit Dashboard: QTCREATORBUG-31807
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            ansemkiv Andrii Semkiv
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes