Utils: Set working directory for tar process instead of using -C

The Windows 11 tar executable cannot handle paths with non-latin
characters e.g. a project directory named "Hello🌍".

This way the tar process won't have to change directory to do file
operations, it will just use the current directory.

The CMake Project Manager is copying the "package-manager" directory from the Qt Creator installation to the application's "<build-directory/.qtc/" directory.

The function FilePath::copyRecursively is being used, which then will end up having a "tar" that fails to "chdir" in a build directory path containing non-latin characters like 🌍.

Fixes: QTCREATORBUG-31807
Change-Id: I725ebe704d49e7a9d70e2ca35a17b6d172afa4a5
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>